# StudentAnalyser

./: .gitignore  CMakeLists.txt  Makefile  README.md  StudentAnalyser
arduino/cardScannerUID/: cardScannerUID.ino
include/: def.h  mainwindow.h
libs/analyser/: CMakeLists.txt  analyser.cpp  analyser.h
libs/database/: CMakeLists.txt  database.cpp  database.hpp  readme.txt
libs/dataviewer/: CMakeLists.txt  dataviewer.cpp  dataviewer.h
libs/filemanager/: CMakeLists.txt  filemanager.cpp  filemanager.h
libs/logger/: CMakeLists.txt  logger.cpp  logger.h
libs/scanner/: CMakeLists.txt  scanner.cpp  scanner.h  scannerThread.cpp  scannerThread.h
libs/seriallib/: CMakeLists.txt  serialib.cpp
src/: main.cpp  mainwindow.cpp  mainwindow.ui
